<resources>
    <string name="app_name">AndroidTesting</string>
    <string name="username_hint">Usuário:</string>
    <string name="password_hint">Senha:</string>
    <string name="login">Entrar</string>

    <string name="login_success">Sucesso</string>
    <string name="login_failed">Falha</string>
</resources>
